--- a/swm-wallymer/index.html
+++ b/swm-wallymer/index.html
@@ -18,7 +18,7 @@
 	<meta property="og:url" content="https://www.sladewatkinsmedia.com/swm-wallymer/"> 
     <link rel="shortcut icon" type="image/png" href="../favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="../all.css?425">
+	<link rel="stylesheet" type="text/css" href="../all.css?400">
 	
     <title>SWM Wallymer</title>
 
@@ -34,7 +34,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc l-bloc " id="bloc-0">
+<div class="bloc l-bloc" id="bloc-0">
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col">
@@ -45,14 +45,14 @@
 							<span class="navbar-toggler-icon"><svg height="32" viewBox="0 0 32 32" width="32"><path class="svg-menu-icon" d="m2 9h28m-28 7h28m-28 7h28"></path></svg></span>
 						</button>
 						<div class="collapse navbar-collapse navbar-40948">
-								<ul class="site-navigation nav navbar-nav ms-auto">
-									<li class="nav-item">
+								<ul class="site-navigation nav navbar-nav ms-auto menu-font-switch">
+									<li class="nav-item menu-font-switch">
 										<a href="../" class="nav-link">Slade Watkins Media</a>
 									</li>
-									<li class="nav-item">
+									<li class="nav-item menu-font-switch">
 										<a href="." class="a-btn nav-link">SWM Wallymer</a>
 									</li>
-									<li class="nav-item">
+									<li class="nav-item menu-font-switch">
 										<a href="https://www.kakarikoherald.com" class="nav-link a-btn">Kakariko Herald</a>
 									</li>
 								</ul>
@@ -162,8 +162,8 @@
 
 
 <!-- Additional JS -->
-<script src="../js/bootstrap.bundle.min.js?9419"></script>
-<script src="../js/blocs.min.js?4891"></script>
+<script src="../js/bootstrap.bundle.min.js?3680"></script>
+<script src="../js/blocs.min.js?5946"></script>
 <script src="../js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
