--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 										<strong>Slade Watkins</strong>
 									</h4>
 									<p class="text-center text-lg-start p-3-style">
-										<strong>Pronouns:</strong> he/him
+										<strong>Pronouns:</strong> he/they
 									</p>
 									<p class="text-center text-lg-start p-3-style">
 										The founder of Slade Watkins Media. It’s his namesake after all… we’re not really sure what he does here beside brag about having his name on everything.
