add mastodon verification code
Signed-off-by: Slade Watkins <srw@sladewatkins.net>

--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
 <script src="./js/blocs.min.js?5946"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
+<a style="display: none;" href="https://mastodon.social/@sladewatkinsmedia">Mastodon</a>
 
 </body>
 </html>
